Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26805

Environment::systemEnvironment() isn't thread safe

    XMLWordPrintable

Details

    Description

      Environment::systemEnvironment() isn't thread safe, however it's used in e.g. QtcProcess::start(), which may be called from any thread. The environment may be changed at any time in the main thread by a call to Environment::setSystemEnvironment() - e.g. from Environment | System settings.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes