Environment: Make systemEnvironment() thread safe

Fixes: QTCREATORBUG-26805
Change-Id: I839995699ffd25579a6a77405331a9802edaf7f1
Reviewed-by: Eike Ziller <eike.ziller@qt.io>